--- a/index.html
+++ b/index.html
@@ -10,3 +10,22 @@
   <p>Site en cours de finalisation...</p>
 </body>
 </html>
+<section id="produits" class="section">
+  <h2>Nos lampes</h2>
+
+  <div class="product">
+    <h3>Lampe LED FLEX</h3>
+    <img src="assets/lampe-flex.jpg" alt="Lampe FLEX" style="max-width: 100%; border-radius: 8px;">
+    <p>Bras flexible, variateur tactile, base bois chêne massif.</p>
+    <p>Coloris : Blanc / Noir / Vert d'eau</p>
+    <a href="#contact" class="btn">Demander un devis</a>
+  </div>
+
+  <div class="product">
+    <h3>Lampe LED GIANT</h3>
+    <img src="assets/lampe-giant.jpg" alt="Lampe GIANT" style="max-width: 100%; border-radius: 8px;">
+    <p>Double bras articulé, réglage intensité et température, base bois.</p>
+    <p>Coloris : Blanc / Noir</p>
+    <a href="#contact" class="btn">Demander un devis</a>
+  </div>
+</section>
